Grab the tooltip texts from custom attributes for easier i18n (?).

--- a/src/pmt/css/PreferencesManagementTool.css
+++ b/src/pmt/css/PreferencesManagementTool.css
@@ -475,10 +475,10 @@ input:checked + .addToMyPreferencesStar {
 }
 
 .addToMyPreferencesLabel[title]:after {
-	content:"Add to my preferences";
+	content:attr(tooltip-unchecked);
 }
 
 input:checked + .addToMyPreferencesStar + .addToMyPreferencesLabel[title]:after {
-	content:"Remove from my preferences";
+	content:attr(tooltip-checked);
 }
 
