--- a/src/shared/lib/infusion/components/uiOptions/html/UIOptionsTemplate-contrastNew.html
+++ b/src/shared/lib/infusion/components/uiOptions/html/UIOptionsTemplate-contrastNew.html
@@ -9,7 +9,11 @@
 <label class="addToMyPreferencesLabel" for="addToMyPreferencesContrast" tooltip-checked="Remove from my preferences" tooltip-unchecked="Add to my preferences" title=""></label>
 <br/>
 <div class="fl-uiOptions-category fl-uiOptions-text">
-	<div>
-		aaaa
-	</div>
+    <h2><label class="flc-uiOptions-contrast-label"></label></h2>
+
+    <div class="flc-uiOptions-preview-per-setting-container">
+    	<div class="fl-adjuster-icons flc-uiOptions-preview-per-setting-eye"></div>
+    	<div class="flc-uiOptions-preview-per-setting-eye-background"></div>
+    	<iframe class="flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
+    </div>
 </div>
