Divide-and-conquer: First version of auditoryOutLanguage searchable dropdown implemented. Division of templates procrastinated.

--- a/src/shared/adjusters/css/style.css
+++ b/src/shared/adjusters/css/style.css
@@ -4,12 +4,12 @@
     /*font-family: 'Open Sans', sans-serif;*/
 }
 
-.gpii-punctuationVerbosity-description {
+.gpii-screenReaderBrailleOutput-description {
     font-size: 15px;
 }
 
-.gpii-screenReaderBrailleOutput-description {
-    font-size: 15px;
+.gpii-punctuationVerbosity-row {
+    display: inline;
 }
 
 
