--- a/src/shared/lib/infusion/components/uiOptions/html/UIOptionsTemplate-contrastNew.html
+++ b/src/shared/lib/infusion/components/uiOptions/html/UIOptionsTemplate-contrastNew.html
@@ -1,7 +1,9 @@
 <input type="checkbox" id="preferenceSwitchContrast" class="flc-uiOptions-constrastInput"/>
-<div class="headerImage fl-adjuster-icons">
+<div class="headerImage fl-adjuster-icons fl-adjuster-icons-sept-12">
 </div>
 <label class="headerTitle" for="preferenceSwitchContrast">add contrast</label>
+<div class="headerImageTick fl-adjuster-icons fl-adjuster-icons-sept-12">
+</div>
 
 <input type="checkbox" id="addToMyPreferencesContrast"/>
 <div class="fl-adjuster-icons fl-adjuster-icons-additional addToMyPreferencesStar">
