--- a/demos/discoveryTool/demo.css
+++ b/demos/discoveryTool/demo.css
@@ -529,3 +529,17 @@ div.main-content-image + .fl-discoveryTool-moreText {
 .fl-simplify #porbital 		{height: 18.5em;}
 .fl-simplify #structure 	{height: 25.4em;}
 .fl-simplify #energylevels 	{height: 26em;  }
+
+.fl-expand-toggle-button {
+    position: absolute;
+    width: 100%;
+    top: 0px; 
+    left: 0px; 
+    height: 100%; 
+    text-align: right; 
+    padding-right: 4em;
+}
+
+.fl-icon-size {
+    font-size: 2.5em;
+}
