--- a/src/pmt/css/PreferencesManagementTool.css
+++ b/src/pmt/css/PreferencesManagementTool.css
@@ -256,6 +256,12 @@ input[type=checkbox]:checked + .headerImage + label.headerTitle {
 	//height: 2em !important;
 	text-align: center !important;
 	font-size: 1.5em !important;
+	margin-top: 1px !important;
+	margin-bottom: 2px !important;
+}
+
+.flc-uiOptions-plus-minus-numerical-min-reached {
+	color: #D3D3D3 !important;
 }
 
 /*
@@ -416,7 +422,7 @@ input[type=checkbox]:checked + .headerImage + label.headerTitle {
 
 .fl-magnifierFollows-uio-icon {
 	font-size: 6.8em !important;
-	margin-bottom: 0.2em !important;
+	padding-bottom: 0.2em !important;
 	color: white;
 }
 
@@ -578,10 +584,12 @@ input:checked + .flc-uiOptions-magnifierFollows-label > .fl-magnifierFollows-uio
   	position: absolute;
     font-size: 16px;
     display: table;
+    padding: 2px;
 }
 
 input:checked + .addToMyPreferencesStar {
     color: #fae80b;
+    border-radius: 50%;
 }
 
 .addToMyPreferencesLabel {
@@ -592,6 +600,7 @@ input:checked + .addToMyPreferencesStar {
 	margin-left: 310px;
     margin-top: 10px;
     display: table;
+    padding: 2px;
 }
 
 /*
@@ -687,6 +696,46 @@ input:checked + .addToMyPreferencesStar + .addToMyPreferencesLabel[title]:after 
 
 .flc-uiOptions-contrast-theme .fl-indicator {
 	background-color: transparent !important;
+}
+
+/* .flc-uiOptions-contrast-theme .flc-uiOptions-plus-minus-numerical-minus, .flc-uiOptions-contrast-theme .flc-uiOptions-plus-minus-numerical-plus {
+	border: 2px solid;
+}
+
+.flc-uiOptions-contrast-theme .flc-uiOptions-plus-minus-numerical-value {
+	width: 74% !important;
+} */
+
+.flc-uiOptions-contrast-theme .flc-uiOptions-plus-minus-numerical-min-reached {
+	color: gray !important;
+}
+
+.fl-theme-yb .fl-uiOptions input:focus + label, .fl-theme-yb .fl-uiOptions .fl-choice input:focus ~ label {
+    outline: none !important;
+}
+
+.fl-theme-uio-yb .fl-focus:focus, .fl-theme-uio-yb .fl-focus *:focus, .fl-theme-uio-yb.fl-focus *:focus, .fl-theme-uio-yb .selectable, .fl-theme-uio-by .fl-inverted-color .fl-focus:focus, .fl-theme-uio-by .fl-inverted-color .fl-focus *:focus, .fl-theme-uio-by.fl-inverted-color.fl-focus *:focus, .fl-theme-uio-by .fl-inverted-color .selectable {
+    outline: 2px solid #FFFF00 !important;
+}
+
+.flc-uiOptions-contrast-theme .fl-magnifierFollows-uio-icon {
+	border: 1px solid;
+}
+
+.flc-uiOptions-contrast-theme .fl-magnifierFollows-uio-icon-check {
+	margin-top: -1.9em;
+}
+
+.flc-uiOptions-contrast-theme .flc-uiOptions-plus-minus-numerical-widget {
+	width: calc(100% - 2px) !important;
+	border: 1px solid !important;
+	background-color: #FFFFFF;
+	display: table;
+    //height: 2em;
+}
+
+.flc-uiOptions-contrast-theme .flc-uiOptions-plus-minus-numerical-value {
+	margin-bottom: 1px !important;
 }
 
 /*
