--- a/src/shared/lib/infusion/components/uiOptions/html/UIOptionsTemplate-cursorSize.html
+++ b/src/shared/lib/infusion/components/uiOptions/html/UIOptionsTemplate-cursorSize.html
@@ -7,8 +7,8 @@
     	<iframe class="flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
     </div>
 
-    <div class="fl-inputs">
-        <div class="fl-force-left">
+    <div>
+        <div>
             <div class="fl-adjuster-icons fl-icon-small-cursor" role="img"></div>
             <div class="flc-textfieldSlider-slider fl-force-left fl-slider fl-slider-horz"> </div>
             <div class="fl-adjuster-icons fl-icon-big-cursor" role="img"></div>            
